COMMERCE-7550 Mapping view refactored in import/export

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4811,6 +4811,7 @@ desktop-view=Desktop View
 destination=Destination
 destination-address=Destination Address
 destination-directory=Destination Directory
+destination-field=Destination Field
 destination-name=Destination Name
 destination-page=Destination Page
 destination-page-help=Set the friendly URL of the search results display page (e.g. "/search").
@@ -14056,6 +14057,7 @@ source-address=Source Address
 source-code=Source Code
 source-code-url=Source Code URL
 source-file=Source File
+source-file-field=Source File Field
 source-name=Source Name
 source-selection=Source Selection
 source-url=Source URL
