COMMERCE-8551 Add condition for executing only commerce integration tests

--- a/test.properties
+++ b/test.properties
@@ -2476,6 +2476,9 @@
     # Commerce Database
     #
 
+    test.batch.class.names.includes[commerce-database]=\
+        **/commerce/**/*Test.java
+
     test.batch.dist.app.servers[commerce-database]=tomcat
 
     test.batch.names[commerce-database]=\
