--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen).
 html-format=HTML Format
 html-mode=HTML Mode
+html-tag=HTML Tag
 html-title=HTML Title
 html-title-help=This text will be applied to the title meta tag inside the head section of the page. The recommended length is under 60 characters.
 http-client-factory-configuration-name=HTTP Client Factory Configuration
@@ -9254,6 +9255,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml not found in the LAR
 missing-redirect-uri=The application did not provide the request parameter "redirect_uri". Please report the issue to the application provider.
 missing-requirement-conflict=Missing Requirement Conflict
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO.
 mm-dd-yyyy=(mm/dd/yyyy)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm
