--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -12059,6 +12059,7 @@ reassign=Reassign
 reassign-task=Reassign Task
 reassign-to-system-role=Reassign to System Role
 reassignment=Reassignment
+reassignment-type=Reassignment Type
 reaumure=Réaumure
 reauthenticate=Reauthenticate
 recalculate=Recalculate
@@ -12901,6 +12902,7 @@ script=Script
 script-file=Script File
 script-language=Script Language
 scripted-assignment=Scripted Assignment
+scripted-reassignment=Scripted Reassignment
 scripted-recipient=Scripted Recipient
 scroll=Scroll
 scrolling=Scrolling
@@ -13220,6 +13222,7 @@ select-product-group=Select Product Group
 select-question=Select Question
 select-radius=Select Radius
 select-reassign-to-retry=Select 'Reassign' to retry.
+select-reassignment=Select Reassignment
 select-recipients=Select Recipients
 select-region=Select Region
 select-role=Select Role
@@ -13255,6 +13258,7 @@ select-the-form-template-used-to-add-records-to-the-list=Select the form templat
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed.
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications.
+select-the-reassignment-type=Select the reassignment type.
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Select the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Select the scope of the action that this role can perform on the portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>.
