--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -251,6 +251,8 @@ bundle.version[com.liferay.akismet.web]=1.0.0
 bundle.version[com.liferay.alloy.mvc]=6.0.14
 bundle.version[com.liferay.amazon.rankings.web]=5.0.18
 bundle.version[com.liferay.analytics.api]=5.0.5
+bundle.version[com.liferay.analytics.batch.exportimport.api]=1.0.0
+bundle.version[com.liferay.analytics.batch.exportimport.impl]=1.0.0
 bundle.version[com.liferay.analytics.client.impl]=1.0.0
 bundle.version[com.liferay.analytics.client.js]=1.0.0
 bundle.version[com.liferay.analytics.client.osgi.demo]=1.0.0
@@ -365,7 +367,7 @@ bundle.version[com.liferay.asset.tags.validator]=5.0.6
 bundle.version[com.liferay.asset.test.util]=5.0.4
 bundle.version[com.liferay.asset.test]=1.0.0
 bundle.version[com.liferay.asset.web]=6.0.10
-bundle.version[com.liferay.batch.engine.api]=15.0.2
+bundle.version[com.liferay.batch.engine.api]=15.1.0
 bundle.version[com.liferay.batch.engine.service]=4.0.26
 bundle.version[com.liferay.batch.engine.test]=1.0.0
 bundle.version[com.liferay.batch.planner.api]=7.1.1
@@ -463,7 +465,7 @@ bundle.version[com.liferay.commerce.account.test]=1.0.0
 bundle.version[com.liferay.commerce.account.web]=4.0.14
 bundle.version[com.liferay.commerce.address.content.web]=4.0.18
 bundle.version[com.liferay.commerce.address.web]=4.0.19
-bundle.version[com.liferay.commerce.api]=35.0.1
+bundle.version[com.liferay.commerce.api]=36.0.0
 bundle.version[com.liferay.commerce.application.list]=6.0.8
 bundle.version[com.liferay.commerce.availability.estimate.web]=4.0.14
 bundle.version[com.liferay.commerce.avalara.connector.api]=1.0.0
@@ -587,7 +589,7 @@ bundle.version[com.liferay.commerce.service]=11.0.58
 bundle.version[com.liferay.commerce.shipment.content.web]=4.0.13
 bundle.version[com.liferay.commerce.shipment.web]=4.0.18
 bundle.version[com.liferay.commerce.shipping.engine.fedex]=5.0.15
-bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=10.0.1
+bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=10.1.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.service]=4.0.19
 bundle.version[com.liferay.commerce.shipping.engine.fixed.test]=1.0.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.web]=4.0.20
@@ -610,7 +612,7 @@ bundle.version[com.liferay.commerce.tax.engine.remote]=1.0.13
 bundle.version[com.liferay.commerce.tax.service]=4.0.15
 bundle.version[com.liferay.commerce.tax.test]=1.0.0
 bundle.version[com.liferay.commerce.tax.web]=4.0.13
-bundle.version[com.liferay.commerce.term.api]=3.0.1
+bundle.version[com.liferay.commerce.term.api]=3.1.0
 bundle.version[com.liferay.commerce.term.service]=1.0.6
 bundle.version[com.liferay.commerce.term.test]=1.0.0
 bundle.version[com.liferay.commerce.term.web]=1.0.6
@@ -942,7 +944,7 @@ bundle.version[com.liferay.headless.admin.content.api]=3.2.4
 bundle.version[com.liferay.headless.admin.content.client]=2.0.13
 bundle.version[com.liferay.headless.admin.content.impl]=2.0.23
 bundle.version[com.liferay.headless.admin.content.test]=1.0.0
-bundle.version[com.liferay.headless.admin.list.type.api]=3.0.2
+bundle.version[com.liferay.headless.admin.list.type.api]=3.1.0
 bundle.version[com.liferay.headless.admin.list.type.client]=1.0.7
 bundle.version[com.liferay.headless.admin.list.type.impl]=1.0.14
 bundle.version[com.liferay.headless.admin.list.type.test]=1.0.0
@@ -985,7 +987,7 @@ bundle.version[com.liferay.headless.commerce.admin.pricing.api]=15.2.4
 bundle.version[com.liferay.headless.commerce.admin.pricing.client]=4.0.12
 bundle.version[com.liferay.headless.commerce.admin.pricing.impl]=4.0.24
 bundle.version[com.liferay.headless.commerce.admin.pricing.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.2.4
+bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.3.0
 bundle.version[com.liferay.headless.commerce.admin.shipment.client]=1.0.11
 bundle.version[com.liferay.headless.commerce.admin.shipment.impl]=1.0.20
 bundle.version[com.liferay.headless.commerce.admin.shipment.test]=1.0.0
@@ -1010,7 +1012,7 @@ bundle.version[com.liferay.headless.commerce.machine.learning.test]=1.0.0
 bundle.version[com.liferay.headless.commerce.punchout.api]=5.2.4
 bundle.version[com.liferay.headless.commerce.punchout.impl]=4.0.12
 bundle.version[com.liferay.headless.common.spi]=8.0.7
-bundle.version[com.liferay.headless.delivery.api]=35.3.2
+bundle.version[com.liferay.headless.delivery.api]=35.4.0
 bundle.version[com.liferay.headless.delivery.client]=4.0.21
 bundle.version[com.liferay.headless.delivery.impl]=5.0.51
 bundle.version[com.liferay.headless.delivery.test]=1.0.0
@@ -1059,7 +1061,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.16
 bundle.version[com.liferay.item.selector.web]=7.0.15
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.4
-bundle.version[com.liferay.jenkins.results.parser]=1.0.1005
+bundle.version[com.liferay.jenkins.results.parser]=1.0.1009
 bundle.version[com.liferay.journal.api]=10.0.2
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.6
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.17
@@ -1118,7 +1120,7 @@ bundle.version[com.liferay.layout.item.selector.web]=5.0.13
 bundle.version[com.liferay.layout.page.template.admin.api]=2.0.5
 bundle.version[com.liferay.layout.page.template.admin.web.test]=1.0.0
 bundle.version[com.liferay.layout.page.template.admin.web]=2.0.41
-bundle.version[com.liferay.layout.page.template.api]=10.0.1
+bundle.version[com.liferay.layout.page.template.api]=11.0.0
 bundle.version[com.liferay.layout.page.template.item.selector.api]=2.1.2
 bundle.version[com.liferay.layout.page.template.item.selector.web]=1.0.10
 bundle.version[com.liferay.layout.page.template.service]=4.0.30
@@ -1254,20 +1256,20 @@ bundle.version[com.liferay.oauth2.provider.scope.spi]=4.0.5
 bundle.version[com.liferay.oauth2.provider.service]=4.0.19
 bundle.version[com.liferay.oauth2.provider.shortcut]=4.0.11
 bundle.version[com.liferay.oauth2.provider.test]=1.0.0
-bundle.version[com.liferay.oauth2.provider.web]=4.0.25
+bundle.version[com.liferay.oauth2.provider.web]=4.0.26
 bundle.version[com.liferay.object.admin.rest.api]=4.6.1
 bundle.version[com.liferay.object.admin.rest.client]=1.0.15
 bundle.version[com.liferay.object.admin.rest.impl]=1.0.23
 bundle.version[com.liferay.object.admin.rest.test]=1.0.0
-bundle.version[com.liferay.object.api]=12.0.1
+bundle.version[com.liferay.object.api]=13.0.0
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type.api]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping]=1.0.12
 bundle.version[com.liferay.object.rest.api]=3.0.1
-bundle.version[com.liferay.object.rest.impl]=1.0.22
+bundle.version[com.liferay.object.rest.impl]=1.0.23
 bundle.version[com.liferay.object.service]=1.0.40
 bundle.version[com.liferay.object.test]=1.0.0
-bundle.version[com.liferay.object.web]=1.0.47
+bundle.version[com.liferay.object.web]=1.0.49
 bundle.version[com.liferay.on.demand.admin.api]=1.0.0
 bundle.version[com.liferay.on.demand.admin.impl]=1.0.0
 bundle.version[com.liferay.on.demand.admin.test]=1.0.0
@@ -1277,7 +1279,7 @@ bundle.version[com.liferay.organizations.item.selector.api]=4.0.6
 bundle.version[com.liferay.organizations.item.selector.web]=4.0.10
 bundle.version[com.liferay.organizations.service]=4.0.20
 bundle.version[com.liferay.organizations.test]=1.0.0
-bundle.version[com.liferay.osb.site.initializer.customer.portal]=1.0.0
+bundle.version[com.liferay.osb.site.initializer.customer.portal]=1.0.1
 bundle.version[com.liferay.osb.site.initializer.liferay.online]=1.0.0
 bundle.version[com.liferay.osgi.bundle.builder]=2.1.2
 bundle.version[com.liferay.osgi.log.service.extender]=5.0.7
@@ -1401,7 +1403,7 @@ bundle.version[com.liferay.portal.file.install.impl]=4.0.17
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.9
-bundle.version[com.liferay.portal.impl]=26.0.1
+bundle.version[com.liferay.portal.impl]=27.0.1
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.12
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.8
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.5
@@ -1413,7 +1415,7 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.5
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.8
 bundle.version[com.liferay.portal.jsp.engine]=1.0.6
-bundle.version[com.liferay.portal.kernel]=38.0.1
+bundle.version[com.liferay.portal.kernel]=39.0.1
 bundle.version[com.liferay.portal.language.extender]=6.0.13
 bundle.version[com.liferay.portal.language.lang]=1.0.77
 bundle.version[com.liferay.portal.language.override.api]=2.0.1
@@ -1630,7 +1632,7 @@ bundle.version[com.liferay.portal.template.soy.renderer.api]=3.0.5
 bundle.version[com.liferay.portal.template.soy.renderer.impl]=3.0.8
 bundle.version[com.liferay.portal.template.test]=1.0.0
 bundle.version[com.liferay.portal.template.velocity]=6.0.19
-bundle.version[com.liferay.portal.test]=11.1.1
+bundle.version[com.liferay.portal.test]=11.1.2
 bundle.version[com.liferay.portal.tika.test]=1.0.0
 bundle.version[com.liferay.portal.tika]=1.0.2
 bundle.version[com.liferay.portal.tools.bundle.support]=3.7.4
@@ -1642,13 +1644,13 @@ bundle.version[com.liferay.portal.tools.db.support]=1.0.9
 bundle.version[com.liferay.portal.tools.db.upgrade.client]=4.0.0
 bundle.version[com.liferay.portal.tools.java.parser]=1.0.47
 bundle.version[com.liferay.portal.tools.portal.compat.bytecode.transformer]=1.0.4
-bundle.version[com.liferay.portal.tools.rest.builder]=1.0.227
+bundle.version[com.liferay.portal.tools.rest.builder]=1.0.229
 bundle.version[com.liferay.portal.tools.sample.sql.builder]=3.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.api]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.service]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.test]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.uad]=1.0.0
-bundle.version[com.liferay.portal.tools.service.builder]=1.0.413
+bundle.version[com.liferay.portal.tools.service.builder]=1.0.414
 bundle.version[com.liferay.portal.tools.soy.builder]=3.0.5
 bundle.version[com.liferay.portal.tools.theme.builder]=1.1.10
 bundle.version[com.liferay.portal.tools.upgrade.table.builder]=1.0.11
@@ -1738,9 +1740,9 @@ bundle.version[com.liferay.portlet.preferences.test]=1.0.0
 bundle.version[com.liferay.portlet.tck.bridge]=4.0.1
 bundle.version[com.liferay.portlet.test]=1.0.0
 bundle.version[com.liferay.portlet.title.localization.test]=1.0.0
-bundle.version[com.liferay.poshi.core]=1.0.52
+bundle.version[com.liferay.poshi.core]=1.0.53
 bundle.version[com.liferay.poshi.runner.resources]=1.0.12
-bundle.version[com.liferay.poshi.runner]=1.0.337
+bundle.version[com.liferay.poshi.runner]=1.0.338
 bundle.version[com.liferay.post.upgrade.fix.api]=4.0.0
 bundle.version[com.liferay.product.navigation.applications.menu.api]=2.0.8
 bundle.version[com.liferay.product.navigation.applications.menu.web.test]=1.0.0
@@ -1850,7 +1852,7 @@ bundle.version[com.liferay.search.experiences.rest.test]=1.0.0
 bundle.version[com.liferay.search.experiences.service]=1.0.8
 bundle.version[com.liferay.search.experiences.test]=1.0.0
 bundle.version[com.liferay.search.experiences.web]=1.0.7
-bundle.version[com.liferay.segments.api]=4.0.1
+bundle.version[com.liferay.segments.api]=5.0.0
 bundle.version[com.liferay.segments.asah.connector.test]=1.0.0
 bundle.version[com.liferay.segments.asah.connector]=3.0.13
 bundle.version[com.liferay.segments.asah.rest.api]=4.2.4
@@ -1975,7 +1977,8 @@ bundle.version[com.liferay.social.group.statistics.web]=6.0.12
 bundle.version[com.liferay.social.requests.web]=5.0.11
 bundle.version[com.liferay.social.user.statistics.api]=5.0.5
 bundle.version[com.liferay.social.user.statistics.web]=7.0.12
-bundle.version[com.liferay.source.formatter]=1.0.1203
+bundle.version[com.liferay.source.formatter.standalone]=1.0.1
+bundle.version[com.liferay.source.formatter]=1.0.1206
 bundle.version[com.liferay.staging.api]=7.0.1
 bundle.version[com.liferay.staging.bar.web]=5.0.19
 bundle.version[com.liferay.staging.configuration.web]=5.0.17
@@ -2054,9 +2057,9 @@ bundle.version[com.liferay.users.admin.uad.test]=1.0.0
 bundle.version[com.liferay.users.admin.uad]=6.0.9
 bundle.version[com.liferay.users.admin.web]=6.0.38
 bundle.version[com.liferay.util.bridges]=9.0.6
-bundle.version[com.liferay.util.java]=17.0.1
+bundle.version[com.liferay.util.java]=17.1.1
 bundle.version[com.liferay.util.slf4j]=6.0.7
-bundle.version[com.liferay.util.taglib]=8.4.5
+bundle.version[com.liferay.util.taglib]=8.4.6
 bundle.version[com.liferay.view.count.api]=3.0.1
 bundle.version[com.liferay.view.count.service]=2.0.12
 bundle.version[com.liferay.view.count.test]=1.0.0
@@ -2141,6 +2144,8 @@ project.name[com.liferay.akismet.web]=:dxp:apps:akismet:akismet-web
 project.name[com.liferay.alloy.mvc]=:apps:alloy:alloy-mvc
 project.name[com.liferay.amazon.rankings.web]=:apps:archived:amazon-rankings-web
 project.name[com.liferay.analytics.api]=:apps:analytics:analytics-api
+project.name[com.liferay.analytics.batch.exportimport.api]=:apps:analytics:analytics-batch-export-import-api
+project.name[com.liferay.analytics.batch.exportimport.impl]=:apps:analytics:analytics-batch-export-import-impl
 project.name[com.liferay.analytics.client.impl]=:apps:analytics:analytics-client-impl
 project.name[com.liferay.analytics.client.js]=:apps:analytics:analytics-client-js
 project.name[com.liferay.analytics.client.osgi.demo]=:apps:analytics:analytics-client-osgi-demo
@@ -3862,6 +3867,7 @@ project.name[com.liferay.social.group.statistics.web]=:apps:archived:social-grou
 project.name[com.liferay.social.requests.web]=:apps:archived:social-requests-web
 project.name[com.liferay.social.user.statistics.api]=:apps:social:social-user-statistics-api
 project.name[com.liferay.social.user.statistics.web]=:apps:archived:social-user-statistics-web
+project.name[com.liferay.source.formatter.standalone]=:util:source-formatter-standalone
 project.name[com.liferay.source.formatter]=:util:source-formatter
 project.name[com.liferay.staging.api]=:apps:staging:staging-api
 project.name[com.liferay.staging.bar.web]=:apps:staging:staging-bar-web
