LPS-146896 Create enum for sortOrder

--- a/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
+++ b/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
@@ -362,6 +362,7 @@ components:
                     format: int32
                     type: integer
                 sortOrder:
+                    enum: [asc, desc]
                     type: string
         Status:
             properties:
