--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ javac.classpath=\
     lib/development/jasper.jar:\
     lib/development/jaxb-api.jar:\
     lib/development/jbi_rt.jar:\
+    lib/development/jhighlight.jar:\
     lib/development/jndi.jar:\
     lib/development/jsch.jar:\
     lib/development/jserrorcollector.jar:\
@@ -140,7 +141,6 @@ javac.classpath=\
     lib/portal/jempbox.jar:\
     lib/portal/jericho-html.jar:\
     lib/portal/jersey-common.jar:\
-    lib/portal/jhighlight.jar:\
     lib/portal/jna.jar:\
     lib/portal/jodd-json.jar:\
     lib/portal/jodd-proxetta.jar:\
