ant update-portal-osgi-configuration-properties

--- a/portal-impl/src/portal-osgi-configuration.properties
+++ b/portal-impl/src/portal-osgi-configuration.properties
@@ -2035,10 +2035,6 @@
     #
     #configuration.override.com.liferay.dynamic.data.mapping.form.web.internal.configuration.DDMFormWebConfiguration_guestUploadMaximumSubmissions=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_DYNAMIC_PERIOD_DATA_PERIOD_MAPPING_PERIOD_FORM_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASES_UBMISSIONS_UPPERCASES_ETTINGS_UPPERCASEC_ONFIGURATION_UNDERLINE_EXPIRATION_UPPERCASED_ATE_UPPERCASEE_NABLED
-    #
-    #configuration.override.com.liferay.dynamic.data.mapping.form.web.internal.configuration.FFSubmissionsSettingsConfiguration_expirationDateEnabled=
-    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_EXPORTIMPORT_PERIOD_CONFIGURATION_PERIOD__UPPERCASEE_XPORT_UPPERCASEI_MPORT_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_INCLUDE_UPPERCASEA_LL_UPPERCASEA_SSET_UPPERCASEL_INKS
     #
     #configuration.override.com.liferay.exportimport.configuration.ExportImportServiceConfiguration_includeAllAssetLinks=
@@ -3022,6 +3018,10 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_CONTENT_PERIOD_PAGE_PERIOD_EDITOR_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_AYOUT_UPPERCASEC_ONTENT_UPPERCASEP_AGE_UPPERCASEE_DITOR_UPPERCASEC_ONFIGURATION_UNDERLINE_PAGINATION_UPPERCASEI_MPROVEMENTS_UPPERCASEE_NABLED
     #
     #configuration.override.com.liferay.layout.content.page.editor.web.internal.configuration.FFLayoutContentPageEditorConfiguration_paginationImprovementsEnabled=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_CONTENT_PERIOD_PAGE_PERIOD_EDITOR_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_AYOUT_UPPERCASEC_ONTENT_UPPERCASEP_AGE_UPPERCASEE_DITOR_UPPERCASEC_ONFIGURATION_UNDERLINE_FRAGMENT_UPPERCASEA_DVANCED_UPPERCASEO_PTIONS_UPPERCASEE_NABLED
+    #
+    #configuration.override.com.liferay.layout.content.page.editor.web.internal.configuration.FFLayoutContentPageEditorConfiguration_fragmentAdvancedOptionsEnabled=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_CONTENT_PERIOD_PAGE_PERIOD_EDITOR_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEP_AGE_UPPERCASEE_DITOR_UPPERCASEC_ONFIGURATION_UNDERLINE_AUTO_UPPERCASEE_XTEND_UPPERCASES_ESSION_UPPERCASEE_NABLED
     #
@@ -5286,10 +5286,6 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_TRANSLATION_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEB_ULK_UPPERCASET_RANSLATION_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
     #
     #configuration.override.com.liferay.translation.web.internal.configuration.FFBulkTranslationConfiguration_enabled=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_TRANSLATION_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_AYOUT_UPPERCASEE_XPERIENCE_UPPERCASES_ELECTOR_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
-    #
-    #configuration.override.com.liferay.translation.web.internal.configuration.FFLayoutExperienceSelectorConfiguration_enabled=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_USER_PERIOD_ASSOCIATED_PERIOD_DATA_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA_NONYMOUS_UPPERCASEU_SER_UPPERCASEC_ONFIGURATION_UNDERLINE_USER_UPPERCASEI_D
     #
