COMMERCE-8141 Added lang property

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11365,6 +11365,7 @@ please-select-a-country=Please select a country.
 please-select-a-course=Please select a course.
 please-select-a-currency=Please select a currency.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms.
 please-select-a-distribution-scope=Please select a distribution scope.
 please-select-a-document-type=Please select a document type.
 please-select-a-duration=Please select a duration.
@@ -11375,6 +11376,7 @@ please-select-a-location=Please select a location.
 please-select-a-menu-item-to-continue=Please select a menu item to continue.
 please-select-a-method-on-the-left=Please select a method on the left.
 please-select-a-new-repository-hook=Please select a new repository hook.
+please-select-a-payment-terms==Please select a payments terms.
 please-select-a-product=Please select a product.
 please-select-a-region=Please select a region.
 please-select-a-response=Please select a response.
