LPS-148460 Move metadata-extractor and xmpcore to portal-tika module

--- a/modules/apps/portal/portal-tika/build.gradle
+++ b/modules/apps/portal/portal-tika/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+	compileInclude group: "com.adobe.xmp", name: "xmpcore", version: "6.0.6"
+	compileInclude group: "com.drewnoakes", name: "metadata-extractor", version: "2.13.0"
 	compileInclude group: "com.liferay", name: "org.gagravarr.tika", version: "0.8.LIFERAY-PATCHED-1"
 	compileInclude group: "com.uwyn", name: "jhighlight", version: "1.0"
 	compileInclude group: "net.java.dev.jna", name: "jna", version: "4.1.0"
