--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Molimo izaberite državu.
 please-select-a-course=Molimo Vas da odaberete kurs.
 please-select-a-currency=Izaberite valutu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Please select a document type. (Automatic Copy)
 please-select-a-duration=Molimo Vas da odaberete trajanje.
@@ -11369,6 +11370,7 @@ please-select-a-location=Molimo Vas da izaberete lokaciju.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Molimo Vas da izaberete metodu levo.
 please-select-a-new-repository-hook=Molimo Vas da izaberete novo spremište.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Molimo odaberite proizvod.
 please-select-a-region=Molimo Vas da izaberete region.
 please-select-a-response=Molimo izaberite odgovor.
