--- a/test.properties
+++ b/test.properties
@@ -2648,6 +2648,7 @@
         unit-jdk8
 
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][data-engine]=\
+        (portal.acceptance != quarantine AND portal.upstream != quarantine) AND \
         (portal.upstream == true) AND \
         (\
             (testray.component.names ~ "Dynamic Data Lists") OR \
@@ -3043,12 +3044,13 @@
         modules-unit-jdk8
 
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][forms]=\
+        (portal.acceptance != quarantine AND portal.upstream != quarantine) AND \
         (testray.main.component.name == "Forms")
 
     test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][forms]=\
         (data.archive.type != "data-archive-calendar") AND \
+        (portal.acceptance != quarantine AND portal.upstream != quarantine) AND \
         (portal.release != "false") AND \
-        (testray.component.names != "Dynamic Data Lists") AND \
         (testray.main.component.name == "Upgrades Forms")
 
     #
