Revert "LPS-145631 portal-search-elasticsearch7-impl: Dont modify the distribution"
This reverts commit bb7a5afcf3af82353602a00f9186ebe2f6db6647.

--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-impl/build.gradle
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-impl/build.gradle
@@ -147,8 +147,12 @@ deploySidecar {
 
 		project.copy {
 			fileMode = 0777
+			includeEmptyDirs = false
 
-			include "elasticsearch-${sidecarElasticsearchServerVersion}/**"
+			exclude "elasticsearch-${sidecarElasticsearchServerVersion}/modules/ingest-geoip/**"
+			exclude "elasticsearch-${sidecarElasticsearchServerVersion}/modules/x-pack-ml/platform/linux-x86_64/bin/controller"
+			include "elasticsearch-${sidecarElasticsearchServerVersion}/lib/**"
+			include "elasticsearch-${sidecarElasticsearchServerVersion}/modules/**"
 
 			into buildDir
 			from tarTree(elasticsearchDistributionFile)
