--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -14277,7 +14277,7 @@ styles-by-default=Styles by Default
 styles-from-master=Styles from Master
 styles-from-theme=Styles from Theme
 stylesheet=Stylesheet
-sub-total=Sub Total
+subtotal=Subtotal
 subcategories=Subcategories
 subcategories[message-board]=Subcategories
 subcategory[message-board]=Subcategory
