--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11365,7 +11365,6 @@ please-select-a-country=Please select a country.
 please-select-a-course=Please select a course.
 please-select-a-currency=Please select a currency.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms.
 please-select-a-distribution-scope=Please select a distribution scope.
 please-select-a-document-type=Please select a document type.
 please-select-a-duration=Please select a duration.
@@ -11376,7 +11375,6 @@ please-select-a-location=Please select a location.
 please-select-a-menu-item-to-continue=Please select a menu item to continue.
 please-select-a-method-on-the-left=Please select a method on the left.
 please-select-a-new-repository-hook=Please select a new repository hook.
-please-select-a-payment-terms==Please select a payments terms.
 please-select-a-product=Please select a product.
 please-select-a-region=Please select a region.
 please-select-a-response=Please select a response.
@@ -11437,10 +11435,12 @@ please-select-at-least-one-organization-and-one-location=Please select at least 
 please-select-at-least-one-section=Please select at least one section.
 please-select-at-least-one-site=Please select at least one site.
 please-select-at-least-one-social-relation-type=Please select at least one social relation type.
+please-select-delivery-terms=Please select delivery terms.
 please-select-one-option=Please select one option.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Please select or create a new field set containing all the fields that will be used by your forms.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Please select or create a new workflow definition to guide the completion of forms. You can associate forms to workflow tasks in the next step.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Please select or create one form for each Workflow Task. Each form is a subset of the field set defined in step 2.
+please-select-payment-terms==Please select a payments terms.
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Please select the applications for which you want to start an export process.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>).
