--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -1,6 +1,7 @@
 bundle.symbolic.name[@liferay/batch-planner-web]=com.liferay.batch.planner.web
 bundle.symbolic.name[@liferay/comment-taglib]=com.liferay.comment.taglib
 bundle.symbolic.name[@liferay/commerce-channel-web]=com.liferay.commerce.channel.web
+bundle.symbolic.name[@liferay/commerce-checkout-web]=com.liferay.commerce.checkout.web
 bundle.symbolic.name[@liferay/commerce-order-content-web]=com.liferay.commerce.order.content.web
 bundle.symbolic.name[@liferay/commerce-order-rule-web]=com.liferay.commerce.order.rule.web
 bundle.symbolic.name[@liferay/commerce-order-web]=com.liferay.commerce.order.web
@@ -201,7 +202,7 @@ bundle.symbolic.name[users-admin-web]=com.liferay.users.admin.web
 bundle.symbolic.name[wiki-web]=com.liferay.wiki.web
 bundle.symbolic.name[youtube-web]=com.liferay.youtube.web
 bundle.version[com.liferay.account.admin.web]=2.0.34
-bundle.version[com.liferay.account.api]=7.0.1
+bundle.version[com.liferay.account.api]=7.1.0
 bundle.version[com.liferay.account.service]=2.0.40
 bundle.version[com.liferay.account.test]=1.0.0
 bundle.version[com.liferay.adaptive.media.api]=6.0.7
@@ -465,7 +466,7 @@ bundle.version[com.liferay.commerce.account.test]=1.0.0
 bundle.version[com.liferay.commerce.account.web]=4.0.14
 bundle.version[com.liferay.commerce.address.content.web]=4.0.18
 bundle.version[com.liferay.commerce.address.web]=4.0.19
-bundle.version[com.liferay.commerce.api]=36.0.1
+bundle.version[com.liferay.commerce.api]=36.1.0
 bundle.version[com.liferay.commerce.application.list]=6.0.8
 bundle.version[com.liferay.commerce.availability.estimate.web]=4.0.14
 bundle.version[com.liferay.commerce.avalara.connector.api]=1.0.0
@@ -519,14 +520,14 @@ bundle.version[com.liferay.commerce.notification.test.util]=4.0.5
 bundle.version[com.liferay.commerce.notification.test]=1.0.0
 bundle.version[com.liferay.commerce.notification.web]=4.0.17
 bundle.version[com.liferay.commerce.order.content.web]=4.0.37
-bundle.version[com.liferay.commerce.order.rule.api]=4.0.1
+bundle.version[com.liferay.commerce.order.rule.api]=4.1.0
 bundle.version[com.liferay.commerce.order.rule.service]=1.0.13
 bundle.version[com.liferay.commerce.order.rule.test]=1.0.0
 bundle.version[com.liferay.commerce.order.rule.web]=1.0.13
 bundle.version[com.liferay.commerce.order.web]=5.0.35
 bundle.version[com.liferay.commerce.organization.api]=6.1.3
 bundle.version[com.liferay.commerce.organization.web]=5.0.26
-bundle.version[com.liferay.commerce.payment.api]=8.1.1
+bundle.version[com.liferay.commerce.payment.api]=9.0.0
 bundle.version[com.liferay.commerce.payment.method.authorize.net]=4.0.14
 bundle.version[com.liferay.commerce.payment.method.mercanet]=4.0.14
 bundle.version[com.liferay.commerce.payment.method.money.order]=4.0.11
@@ -612,7 +613,7 @@ bundle.version[com.liferay.commerce.tax.engine.remote]=1.0.13
 bundle.version[com.liferay.commerce.tax.service]=4.0.15
 bundle.version[com.liferay.commerce.tax.test]=1.0.0
 bundle.version[com.liferay.commerce.tax.web]=4.0.13
-bundle.version[com.liferay.commerce.term.api]=3.1.1
+bundle.version[com.liferay.commerce.term.api]=3.2.0
 bundle.version[com.liferay.commerce.term.service]=1.0.7
 bundle.version[com.liferay.commerce.term.test]=1.0.0
 bundle.version[com.liferay.commerce.term.web]=1.0.7
@@ -728,9 +729,9 @@ bundle.version[com.liferay.document.library.preview.css]=1.0.14
 bundle.version[com.liferay.document.library.preview.document]=3.0.14
 bundle.version[com.liferay.document.library.preview.image]=3.0.14
 bundle.version[com.liferay.document.library.repository.authorization.api]=5.1.6
-bundle.version[com.liferay.document.library.repository.cmis.api]=6.0.9
+bundle.version[com.liferay.document.library.repository.cmis.api]=7.0.0
 bundle.version[com.liferay.document.library.repository.cmis.impl]=6.0.14
-bundle.version[com.liferay.document.library.repository.external.api]=6.0.6
+bundle.version[com.liferay.document.library.repository.external.api]=7.0.0
 bundle.version[com.liferay.document.library.repository.portlet.file.repository.impl]=3.0.11
 bundle.version[com.liferay.document.library.repository.portlet.file.repository.test]=1.0.0
 bundle.version[com.liferay.document.library.repository.portlet.repository.impl]=3.0.8
@@ -1061,7 +1062,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.17
 bundle.version[com.liferay.item.selector.web]=7.0.16
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.4
-bundle.version[com.liferay.jenkins.results.parser]=1.0.1009
+bundle.version[com.liferay.jenkins.results.parser]=1.0.1010
 bundle.version[com.liferay.journal.api]=10.0.2
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.6
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.18
@@ -1257,11 +1258,11 @@ bundle.version[com.liferay.oauth2.provider.service]=4.0.20
 bundle.version[com.liferay.oauth2.provider.shortcut]=4.0.11
 bundle.version[com.liferay.oauth2.provider.test]=1.0.0
 bundle.version[com.liferay.oauth2.provider.web]=4.0.27
-bundle.version[com.liferay.object.admin.rest.api]=4.6.1
+bundle.version[com.liferay.object.admin.rest.api]=4.7.0
 bundle.version[com.liferay.object.admin.rest.client]=1.0.16
 bundle.version[com.liferay.object.admin.rest.impl]=1.0.24
 bundle.version[com.liferay.object.admin.rest.test]=1.0.0
-bundle.version[com.liferay.object.api]=13.0.1
+bundle.version[com.liferay.object.api]=13.1.0
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type.api]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type]=1.0.3
 bundle.version[com.liferay.object.dynamic.data.mapping]=1.0.12
@@ -1403,7 +1404,7 @@ bundle.version[com.liferay.portal.file.install.impl]=4.0.17
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.9
-bundle.version[com.liferay.portal.impl]=27.0.1
+bundle.version[com.liferay.portal.impl]=28.0.1
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.12
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.8
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.5
@@ -1415,7 +1416,7 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.5
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.8
 bundle.version[com.liferay.portal.jsp.engine]=1.0.6
-bundle.version[com.liferay.portal.kernel]=39.0.1
+bundle.version[com.liferay.portal.kernel]=40.0.1
 bundle.version[com.liferay.portal.language.extender]=6.0.13
 bundle.version[com.liferay.portal.language.lang]=1.0.78
 bundle.version[com.liferay.portal.language.override.api]=2.0.1
@@ -2057,7 +2058,7 @@ bundle.version[com.liferay.users.admin.uad.test]=1.0.0
 bundle.version[com.liferay.users.admin.uad]=6.0.9
 bundle.version[com.liferay.users.admin.web]=6.0.39
 bundle.version[com.liferay.util.bridges]=9.0.6
-bundle.version[com.liferay.util.java]=17.1.1
+bundle.version[com.liferay.util.java]=17.1.2
 bundle.version[com.liferay.util.slf4j]=6.0.7
 bundle.version[com.liferay.util.taglib]=8.4.6
 bundle.version[com.liferay.view.count.api]=3.0.1
