--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/package.json
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/package.json
@@ -29,6 +29,7 @@
 		"@clayui/layout": "^3.32.0",
 		"@clayui/pagination": "^3.41.0",
 		"@clayui/pagination-bar": "^3.41.0",
+		"@clayui/popover": "^3.47.0",
 		"@clayui/tooltip": "^3.40.0",
 		"classnames": "^2.3.1",
 		"dompurify": "^2.3.4",
