--- a/test.properties
+++ b/test.properties
@@ -6058,6 +6058,7 @@
         app.server.bundles.size,\
         app.server.type,\
         app.server.types,\
+        asset.publisher.selection.style,\
         aws.store.enabled,\
         blacklist.portal.profile.names.remove,\
         blacklist.saml.algorithms,\
