LRQA-73617 Reassign changeset tests to Staging

--- a/modules/apps/changeset/test.properties
+++ b/modules/apps/changeset/test.properties
@@ -10,10 +10,10 @@
 ##
 
     modules.includes.required[relevant]=\
-        apps/change-tracking
+        apps/staging
 
 ##
 ## Testray
 ##
 
-    testray.main.component.name=Publications
+    testray.main.component.name=Staging
