--- a/test.properties
+++ b/test.properties
@@ -4839,7 +4839,7 @@
         modules-integration-mysql57-jdk8,\
         modules-integration-oracle193-jdk8,\
         modules-integration-postgresql121-jdk8,\
-        modules-integration-sqlserver2019-jdk8,\
+        #modules-integration-sqlserver2019-jdk8,\
         modules-integration-sybase160-jdk8
 
     test.batch.run.property.query[functional-*][publications-environments]=\
