LPS-148651 Add Modal

--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
@@ -21,6 +21,7 @@
 		"@clayui/icon": "^3.40.0",
 		"@clayui/layout": "^3.40.0",
 		"@clayui/loading-indicator": "^3.40.0",
+		"@clayui/modal": "^3.45.0",
 		"@clayui/pagination": "^3.43.0",
 		"@clayui/pagination-bar": "^3.43.0",
 		"@clayui/sticker": "^3.40.0",
