--- a/release.properties
+++ b/release.properties
@@ -61,7 +61,7 @@
     release.info.version.minor=4
     release.info.version.bug.fix=3
     release.info.version.trivial=15
-    release.info.version.update=11
+    release.info.version.update=${release.info.version.trivial}
 
     release.info.version=${release.info.version.major}.${release.info.version.minor}.${release.info.version.bug.fix}.${release.info.version.trivial}
 
