--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=By clicking this toggle you could create a public and/or private site for your organization.
 by-date-range=By Date Range:
 by-email-address=By Email Address
-by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page.
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page.
 by-screen-name=By Screen Name
 by-time-frame=By Time Frame:
 by-user-id=By User ID
@@ -3147,7 +3147,7 @@ collection-item=Collection Item
 collection-items=Collection Items
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection.
 collection-page=Collection Page
-collection-pre-filtered=Collection Pre-filtered
+collection-prefiltered=Collection Prefiltered
 collection-provider=Collection Provider
 collection-providers=Collection Providers
 collection-title=Collection Title
@@ -11649,7 +11649,6 @@ potential-actions=Potential Actions
 pound=Pound
 power-users=Power Users
 powered-by-x=Powered by {0}
-pre-filter-collection=Pre-filter Collection
 precision=Precision
 precision-decimal=Precision Decimal
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed.
@@ -11657,6 +11656,7 @@ predefined=Predefined
 predefined-value=Predefined Value
 predefined-variables=Predefined Variables
 preferences=Preferences
+prefilter-collection=Prefilter Collection
 prefix=Prefix
 prefix-and-suffix-symbols=Prefix and Suffix Symbols
 prefix-or-suffix=Prefix or Suffix
