--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -551,7 +551,11 @@
     source.check.JSONPackageJSONRedundantDependenciesCheck.enabled=true
 
     source.check.JSONPackageJSONRedundantDependenciesCheck.excludedDirNames=\
-        modules/apps/frontend-,\
+        modules/apps/frontend-js/frontend-js-alert-support-web,\
+        modules/apps/frontend-js/frontend-js-collapse-support-web,\
+        modules/apps/frontend-js/frontend-js-dropdown-support-web,\
+        modules/apps/frontend-js/frontend-js-tabs-support-web,\
+        modules/apps/frontend-js/frontend-js-tooltip-support-web,\
         modules/apps/site-initializer/site-initializer-raylife,\
         modules/apps/site-initializer/site-initializer-testray,\
         modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal,\
