--- a/modules/apps/site-initializer/site-initializer-raylife-ap/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-raylife-ap/build.gradle
@@ -19,7 +19,7 @@ task buildExtraRemoteApp
 task forceDeploy
 task zipExtraRemoteApp(type: Zip)
 
-String extraRemoteAppName = "com.liferay.site.initializer.raylife.agent.portal.extra.remote.app"
+String extraRemoteAppName = "com.liferay.site.initializer.raylife.ap.extra.remote.app"
 String extraRemoteAppVersion = "20220221.2020"
 
 DateFormat dateFormat = new SimpleDateFormat("yyyyMMdd.HHmm")
