--- a/modules/dxp/apps/portal-security-audit/portal-security-audit-web/build.gradle
+++ b/modules/dxp/apps/portal-security-audit/portal-security-audit-web/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	compileOnly project(":apps:portal-security-audit:portal-security-audit-api")
 	compileOnly project(":apps:portal-security-audit:portal-security-audit-storage-api")
 	compileOnly project(":apps:static:portal:portal-upgrade-api")
+	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
 	compileOnly project(":core:petra:petra-string")
