LPS-148049 Add more exclusion

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -551,6 +551,7 @@
     source.check.JSONPackageJSONRedundantDependenciesCheck.enabled=true
 
     source.check.JSONPackageJSONRedundantDependenciesCheck.excludedDirNames=\
+        modules/apps/archived,\
         modules/apps/frontend-js/frontend-js-alert-support-web,\
         modules/apps/frontend-js/frontend-js-collapse-support-web,\
         modules/apps/frontend-js/frontend-js-dropdown-support-web,\
