--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -9935,7 +9935,7 @@ no-data-migration-processes-are-available=No data migration processes are availa
 no-data-providers-were-found=No data providers were found.
 no-declined-invites=No declined invites.
 no-default-display-page-template=No Default Display Page Template
-no-default-sort-created-yet=No default sort created yet.
+no-default-sort-was-created-yet=No default sort was created yet.
 no-definitions-were-found=No definitions were found.
 no-delivery-terms=No Delivery Terms
 no-description=No Description
