LPS-148585 change messages to be more fluent

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2452,7 +2452,7 @@ cab=Cab
 cache-actions=Cache Actions
 cache-control=Cache Control
 cache-control-configuration-name=Cache Control
-cache-control-description=Set cache control policy for documents with view permissions for guests.
+cache-control-description=Set the cache control policy for documents with view permissions for guests.
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Cache Directory Clean Up Expunge
 cache-dir-clean-up-expunge-help=Set the number of days a file is kept in the cache.
@@ -10138,8 +10138,8 @@ not-approved=Not Approved
 not-assigned=Not Assigned
 not-attending=Not Attending
 not-available=N/A
-not-cacheable-mime-types=Not Cacheable Mime Types
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached.
+uncacheable-mime-types=Uncacheable Mime Types
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable.
 not-contains=Not Contains
 not-customizable=Not Customizable
 not-customized=Not Customized
