--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
@@ -34,9 +34,11 @@
 		"history": "^5.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-markdown": "^8.0.0",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
 		"recharts": "^2.1.8",
+		"remark-gfm": "^3.0.1",
 		"sass": "^1.49.0"
 	},
 	"devDependencies": {
