LRQA-70620 Create 2 different sizes of upgrade test suites

--- a/ci.properties
+++ b/ci.properties
@@ -111,6 +111,7 @@ ci.test.available.suites=\
     tck,\
     translation,\
     upgrade,\
+    upgrade-all,\
     upgrade-client,\
     upstream-functional,\
     users,\
@@ -225,7 +226,8 @@ ci.test.suite.description[tango-acceptance]=Test Tango (Segmentation and Persona
 ci.test.suite.description[tango-analytics-cloud]=Test segmentation and personalization with Analytics Cloud.
 ci.test.suite.description[tck]=Test TCK tests.
 ci.test.suite.description[translation]=Test Translation Management tests.
-ci.test.suite.description[upgrade]=Test upgrade tests.
+ci.test.suite.description[upgrade]=Test upgrades against all app servers and databases.
+ci.test.suite.description[upgrade-all]=Test upgrades from all components against all app servers and databases.
 ci.test.suite.description[upgrade-client]=Test upgrade client.
 ci.test.suite.description[upstream-functional]=Test upstream functional tests.
 ci.test.suite.description[users]=Test Users and Organizations tests.
