--- a/test.properties
+++ b/test.properties
@@ -5640,6 +5640,38 @@
     test.batch.names[upgrade]=\
         database-upgrade-client-jdk8,\
         functional-upgrade-jboss73-mysql57-jdk8,\
+        functional-upgrade-tomcat90-db2111-jdk8,\
+        functional-upgrade-tomcat90-mariadb102-jdk8,\
+        functional-upgrade-tomcat90-mysql57-jdk8,\
+        functional-upgrade-tomcat90-oracle193-jdk8,\
+        functional-upgrade-tomcat90-postgresql134-jdk8,\
+        functional-upgrade-tomcat90-sqlserver2017-jdk8,\
+        functional-upgrade-weblogic122-mysql57-jdk8,\
+        functional-upgrade-websphere90-mysql57-jdk8,\
+        functional-upgrade-wildfly230-mariadb102-jdk8,\
+        modules-integration-db2111-jdk8,\
+        modules-integration-mariadb102-jdk8,\
+        modules-integration-mysql57-jdk8,\
+        modules-integration-oracle193-jdk8,\
+        modules-integration-postgresql134-jdk8,\
+        modules-integration-sqlserver2017-jdk8,\
+        modules-unit-jdk8
+
+    #
+    # Upgrade All
+    #
+
+    test.batch.class.names.includes[upgrade-all]=\
+        **/src/test/**/*Upgrade*Test.java,\
+        **/src/testIntegration/**/*Upgrade*Test.java,\
+        **/test/**/*Upgrade*Test.java,\
+        **/testIntegration/**/*Upgrade*Test.java
+
+    test.batch.dist.app.servers[upgrade-all]=${test.batch.dist.app.servers}
+
+    test.batch.names[upgrade-all]=\
+        database-upgrade-client-jdk8,\
+        functional-upgrade-jboss73-mysql57-jdk8,\
         functional-upgrade-jboss74-mysql57-jdk8,\
         functional-upgrade-tomcat90-db2111-jdk8,\
         #functional-upgrade-tomcat90-db2115-jdk8,\
@@ -5662,37 +5694,37 @@
         modules-integration-sqlserver2017-jdk8,\
         modules-unit-jdk8
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-db2111-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-db2111-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ db2)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-db2115-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-db2115-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ db2)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb102-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb102-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ mariadb)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ mysql)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-oracle193-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-oracle193-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ oracle)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-postgresql134-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-postgresql134-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ postgresql)
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-sqlserver2017-jdk8][upgrade]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-sqlserver2017-jdk8][upgrade-all]=\
         (app.server.types == null OR app.server.types ~ tomcat) AND \
         (data.archive.type != null) AND \
         (database.types == null OR database.types ~ sqlserver)
