LPS-148815 Remove Questions from Headless team

--- a/test.properties
+++ b/test.properties
@@ -3241,8 +3241,7 @@
     test.batch.class.names.includes[headless]=\
         **/headless/**/*Test.java,\
         **/portal-tools-rest-builder/**/*Test.java,\
-        **/portal-vulcan/**/*Test.java,\
-        **/questions/**/*Test.java
+        **/portal-vulcan/**/*Test.java
 
     test.batch.dist.app.servers[headless]=tomcat
 
@@ -3256,8 +3255,7 @@
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][headless]=\
         (portal.upstream == true) AND \
         (\
-            (testray.main.component.name ~ "Headless") OR \
-            (testray.main.component.name ~ "Questions")\
+            (testray.main.component.name ~ "Headless")\
         )
 
     #
@@ -6610,8 +6608,7 @@
         WYSIWYG
 
     testray.team.headless.component.names=\
-        Headless,\
-        Questions
+        Headless
 
     testray.team.liferay-online.component.names=\
         Liferay Online,\
