LPS-148815 Add Questions to Lima team

--- a/test.properties
+++ b/test.properties
@@ -3584,6 +3584,7 @@
         **/message-boards-web/**/*Test.java,\
         **/notifications-uad-test/**/*Test.java,\
         **/notifications-web-test/**/*Test.java,\
+        **/questions/**/*Test.java,\
         **/ratings-test/**/*Test.java,\
         **/redirect-test/**/*Test.java,\
         **/sharing-blogs-test/**/*Test.java,\
@@ -3706,6 +3707,7 @@
         **/message-boards-web/**/*Test.java,\
         **/notifications-uad-test/**/*Test.java,\
         **/notifications-web-test/**/*Test.java,\
+        **/questions/**/*Test.java,\
         **/ratings-test/**/*Test.java,\
         **/redirect-test/**/*Test.java,\
         **/sharing-blogs-test/**/*Test.java,\
@@ -6506,6 +6508,7 @@
         My Subscriptions,\
         Notifications,\
         Online Editing,\
+        Questions,\
         Ratings,\
         Redirect,\
         SEO,\
