COMMERCE-7551 LANG KEY

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -14210,6 +14210,7 @@ start-creating-a-sort-to-display-specific-data=Start creating a sort to display 
 start-date=Start Date
 start-free-trial=Start Free Trial
 start-from=Start From
+start-import=Start Import
 start-node=Start
 start-online-application=Start Online Application
 start-parameter-name=Start Parameter Name
