COMMERCE-8555 Add ImportExport testcase

--- a/test.properties
+++ b/test.properties
@@ -194,6 +194,7 @@
         portal-application-standards-ee,\
         portal-authentication,\
         portal-authentication-ee,\
+        portal-batch-engine,\
         portal-blade-template,\
         portal-breadcrumb,\
         portal-bundle-blacklist,\
@@ -6266,6 +6267,7 @@
         ${project.dir}/modules/apps/account/account-test/src/testFunctional,\
         ${project.dir}/modules/apps/asset/asset-auto-tagger-google-cloud-natural-language-test/src/testFunctional,\
         ${project.dir}/modules/apps/asset/asset-auto-tagger-test/src/testFunctional,\
+        ${project.dir}/modules/apps/batch-planner/batch-planner-test/src/testFunctional,\
         ${project.dir}/modules/apps/bulk/bulk-selection-test/src/testFunctional,\
         ${project.dir}/modules/apps/calendar/calendar-web-test/src/testFunctional,\
         ${project.dir}/modules/apps/click-to-chat/click-to-chat-test/src/testFunctional,\
