LRQA-73581 Auto-run test suites for liferay-publications user

--- a/ci.properties
+++ b/ci.properties
@@ -2,6 +2,7 @@ ci.test.auto.recipients=\
     liferay-appsec[relevant:security:sf:stable],\
     liferay-frontend[relevant:sf],\
     liferay-objects[sf],\
+    liferay-publications[publications:relevant:sf],\
     liferay-search[search:sf],\
     liferay-staging[relevant:sf:stable:staging],\
     liferay-usm[relevant:sf],\
