LPS-148651 Add @clayui/alert

--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.5.8",
+		"@clayui/alert": "^3.40.0",
 		"@clayui/button": "^3.40.0",
 		"@clayui/charts": "^3.40.0",
 		"@clayui/core": "3.45.1",
@@ -37,7 +38,6 @@
 		"react-markdown": "^8.0.0",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
-		"recharts": "^2.1.8",
 		"remark-gfm": "^3.0.1",
 		"sass": "^1.49.0"
 	},
