--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -215,6 +215,8 @@
 
     checkstyle.ExceptionMapperAnnotationCheck.enabled=true
 
+    checkstyle.ExceptionPrintStackTraceCheck.enabled=true
+
     checkstyle.FactoryCheck.enforceFactoryClassNames=\
         com.liferay.portal.kernel.service.permission.ModelPermissions:com.liferay.portal.kernel.service.permission.ModelPermissionsFactory
 
