LPS-147450 Enable check for test

--- a/modules/util/source-formatter/source-formatter.properties
+++ b/modules/util/source-formatter/source-formatter.properties
@@ -10,6 +10,8 @@
 
     checkstyle.ExceptionMapperAnnotationCheck.enabled=true
 
+    checkstyle.ExceptionPrintStackTraceCheck.enabled=true
+
     source.check.JavaCollapseImportsCheck.jarDirectoryName=src/test/resources
 
     source.check.JavaExceptionCheck.enabled=false
