LPS-147906 Allow nestedFieldsDepth parameter to be added at query level to limit the depth of nested fields

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -11231,6 +11231,18 @@
     my.sites.directory.site.excludes=
 
 ##
+## Object
+##
+
+    #
+    # Set this property to limit the maximum depth of nested DTOs. If the
+    # maximum is set to 0, there will be no nested DTOs.
+    #
+    # Env: LIFERAY_OBJECT_PERIOD_NESTED_PERIOD_FIELDS_PERIOD_MAX_PERIOD_QUERY_PERIOD_DEPTH
+    #
+    object.nested.fields.max.query.depth=5
+
+##
 ## Sites Admin Portlet
 ##
 
