--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -7124,7 +7124,7 @@
     #
     # Env: LIFERAY_LOCK_PERIOD_LISTENERS
     #
-    #lock.listeners=
+    #lock.listeners=com.liferay.portlet.documentlibrary.util.DLFileEntryLockListener
 
     #
     # Set the lock expiration time for each class.
